--- a/express-static/assets/styles/style.css
+++ b/express-static/assets/styles/style.css
@@ -460,6 +460,8 @@ p {
     width: 100%;
     align-items: center;
     justify-content: center;
+    background: #fff;
+
 }
 
 .image-box2 img {
@@ -733,6 +735,9 @@ p {
     overflow-y: scroll;
     justify-content: start !important;
 }
+.imgsss img {
+    object-fit: cover;
+    }
 .imgsss {
     display: flex;
     justify-content: center;
@@ -741,7 +746,7 @@ p {
 .imgsss img{
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
 }
 
 .quntity-arrow-btns {
@@ -1908,6 +1913,8 @@ header .middle input {
     transition: .3s;
     cursor: pointer;
     overflow: hidden;
+    box-shadow: 0px 0px 4px #ccc;
+    max-height: 365px;
 }
 
 .card-itm.item:hover .hover-icons {
@@ -1967,12 +1974,13 @@ header .middle input {
     font-size: 14px;
 }
 
+
 .card-itm.item .img {
-    background-color: #F7F7F7;
+    background-color: #fff;
+    padding-top: 10px;
     text-align: center;
     position: relative;
 }
-
 .card-itm.item .rate span {
     margin-left: 5px;
     color: #EF262C;
