--- a/express-static/assets/styles/style.css
+++ b/express-static/assets/styles/style.css
@@ -1879,6 +1879,7 @@ header .middle input {
 
 .product-items .all-items img {
     height: 250px;
+    width: 100%;
     object-fit: cover;
 }
 
@@ -1913,8 +1914,7 @@ header .middle input {
     cursor: pointer;
     overflow: hidden;
     box-shadow: 0px 0px 4px #ccc;
-    max-height: 365px;
-
+    max-height: 380px;
 }
 
 .card-itm.item:hover .hover-icons {
