--- a/express-static/assets/styles/style.css
+++ b/express-static/assets/styles/style.css
@@ -1352,6 +1352,12 @@ figure.image img{
     padding: 10px 0 0 10px !important;
     background-color: #fff;
 }
+.top-deals .complt h5{
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
 
 .top-deals .item-slider {
     width: 100%;
